--- a/docker/docker-compose-dev.yml
+++ b/docker/docker-compose-dev.yml
@@ -1,92 +1,41 @@
-version: '2.4'
+version: '2.1'
 services:
+   
     mysql:
         image: mysql:5.7
-        environment:
-            - MYSQL_ROOT_PASSWORD=password
-        volumes:
-            - ./mysql/:/docker-entrypoint-initdb.d/
-            - ./volumes/mysql:/var/lib/mysql
-        healthcheck:
-          test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-          timeout: 20s
-          retries: 10
-    uwsgi:
-        image: vidjil/server:latest
-        environment:
-            - WEB2PY_ADMIN_PASSWORD=password
-        command: bash /entrypoints/uwsgi-entrypoint.sh
-        volumes_from:
-            - fuse
-        depends_on:
-            mysql:
-              condition: service_healthy
-            fuse:
-              condition: service_started
-            postfix:
-              condition: service_started
-        links:
-            - mysql:mysql
-            - fuse:fuse
-            - postfix:postfix
-    fuse:
-        image: vidjil/server:latest
-        command: bash /entrypoints/fuse-entrypoint.sh
-        volumes:
-            - ../server/web2py/applications/vidjil/models:/usr/share/vidjil/server/web2py/applications/vidjil/models
-            - ../server/web2py/applications/vidjil/scripts:/usr/share/vidjil/server/web2py/applications/vidjil/scripts
-            - ../server/web2py/applications/vidjil/views:/usr/share/vidjil/server/web2py/applications/vidjil/views
-            - ../server/web2py/applications/vidjil/controllers:/usr/share/vidjil/server/web2py/applications/vidjil/controllers
-
-            - ./volumes/databases:/usr/share/vidjil/server/web2py/applications/vidjil/databases
-            - ./volumes/results:/mnt/result/results
-            - ./volumes/tmp:/mnt/result/tmp
-            - ./volumes/uploads:/mnt/upload/uploads
-            - ./volumes/log:/var/vidjil
-            - ./volumes/log/uwsgi:/var/log/uwsgi
-            - ./volumes/backup:/mnt/backup
-
-            - ../demo:/mnt/data/src
-            - ./vidjil-server/conf:/etc/vidjil
-            - ./vidjil-server/scripts:/entrypoints
-            - ../germline:/usr/share/vidjil/germline
-    nginx:
-        image: vidjil/client:latest
-        depends_on:
-            uwsgi:
-              condition: service_started
-        links:
-            - uwsgi:uwsgi
         ports:
-            - "80:80"
-            - "443:443"
-        command: bash /entrypoints/nginx-entrypoint.sh
+            - "4306:3306"
+            - "43060:33060"
+    uwsgi:
+        image: vidjil/server:py4web
+        command: bash /entrypoints/uwsgi-entrypoint.sh
         volumes:
-            - ./volumes/log/nginx:/var/log/nginx
-            - ./volumes/certs:/etc/letsencrypt/well-known
-            - ./vidjil-client/conf:/etc/vidjil
-            - ./vidjil-client/ssl:/etc/nginx/ssl
-            - ../germline:/usr/share/vidjil/germline
+            # Local volume path
+            - $VOLUME_PATH/results:/mnt/result
+            - $VOLUME_PATH/results/results:/mnt/result/results
+            - $VOLUME_PATH/tmp:/mnt/result/tmp
+            - $VOLUME_PATH/uploads:/mnt/upload/uploads
+            - $VOLUME_PATH/databases:/usr/share/vidjil/server/py4web/apps/vidjil/databases
+            # Use local vidjil repository
+            - ../algo:/usr/share/vidjil/algo
             - ../browser:/usr/share/vidjil/browser
-    workers:
-        image: vidjil/server:latest
-        command: bash /entrypoints/workers-entrypoint.sh
-        volumes_from:
-            - uwsgi
-        depends_on:
-            uwsgi:
-              condition: service_started
-            mysql:
-              condition: service_healthy
-        links:
-            - mysql
-            - postfix
-    postfix:
-        image: catatnight/postfix
-        expose:
-            - 587
+            - ../demo:/usr/share/vidjil/demo
+            - ../demo:/mnt/data/src
+            - ../doc:/usr/share/vidjil/doc
+            - ./:/usr/share/vidjil/docker
+            - ../server/py4web/apps/vidjil:/usr/share/vidjil/server/py4web/apps/vidjil
+            - ../tools:/usr/share/vidjil/tools
+    nginx:
         volumes:
-            - ./postfix/ssl:/etc/postfix/certs
-        environment:
-            - maildomain=vidjil.org
-            - smtp_user=vidjil:smtp_pass
+            - ../browser:/usr/share/vidjil/browser
+            - ./:/usr/share/vidjil/docker
+            - ./vidjil-client/conf/conf.js:/usr/share/vidjil/browser/js/conf.js
+
+    fuse:
+        image: vidjil/server:py4web
+    workers:
+        image: vidjil/server:py4web
+    celery:
+        image: vidjil/server:py4web
+    flower:
+        image: vidjil/server:py4web
