gitlab-ci, add empty need for first version of cypress pipeline for each jobs this allow to start directly at least one ci for each jobs without waiting for previous jobs Other version of browser will wait to start that regular jobs finish

--- a/browser/.gitlab-ci.yml
+++ b/browser/.gitlab-ci.yml
@@ -52,6 +52,8 @@ client1-ff-supported:
     - .need_for_moderate_client
   variables:
     BROWSER: firefox_supported/firefox
+  needs:
+    - []
 
 c2:
   extends:
@@ -72,6 +74,8 @@ external1-ff-supported:
     - .need_for_moderate_client
   variables:
     BROWSER: firefox_supported/firefox
+  needs:
+    - []
 
 external2:
   extends:
@@ -115,6 +119,8 @@ tuto-c1-ff-supported:
     - .need_for_moderate_client
   variables:
     BROWSER: firefox_supported/firefox
+  needs:
+    - []
 
 tuto-c2:
   extends:
