--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,99 @@
-germline/????.fa
-germline/????_downstream.fa
-germline/????_upstream.fa
-germline/mus-musculus/
-germline/rattus-norvegicus
-data/Stanford_S22.fasta
-data/Stanford_S22.rc.fasta
 *.data
 *.clntab
 *.tap
 *.log
 !server/py4web/apps/vidjil/tests/unit/resources/logs/**/*.log
-dep.mk
 *~
 *.o
 *.a
 *.pyc
-/vidjil
-/algo/tests/tests
-/algo/tests/out/
-/algo/TAGS
-/algo/tools/affectanalyser
-/algo/tools/align
-/algo/tools/compareV
-/algo/tools/cut
-/algo/tools/dynprog
-/algo/tools/segmentD
-/out
-/browser/css/*.css
-/browser/cgi/align.cgi
-/browser/js/conf.js
-node_modules/
-server/web2py/applications/vidjil/errors
+*.vidjil
+*.fastq
+*.fastq.gz
+*.gz
+*.swp
 *.bak
+dep.mk
+.directory
+
+algo/git-version.h
+algo/git-version.h.tmp
+algo/tests/tests
+algo/tests/out/
+algo/TAGS
+algo/tools/affectanalyser
+algo/tools/align
+algo/tools/compareV
+algo/tools/cut
+algo/tools/dynprog
+algo/tools/segmentD
+
+browser/css/*.css
+browser/cgi/align.cgi
+browser/js/conf.js
+browser/js/germline.js
+browser/js/git-sha1.js
+browser/chosen
+
+data/Stanford_S22.fasta
+data/Stanford_S22.rc.fasta
+
+demo/*.fa
+demo/*.fasta
 
 docker/vidjil-client/ssl/web2py.crt
-
 docker/vidjil-client/ssl/web2py.key
+docker/volumes/
+
+firefox/
+
+germline/????.fa
+germline/????_downstream.fa
+germline/????_upstream.fa
+germline/mus-musculus/
+germline/rattus-norvegicus
+germline/homo-sapiens/
+germline/germline-59.tar.gz
+germline/IMGT_RELEASE
+germline/*/*.fa
+
+node_modules/
+
+server/py4web/apps/.service/
+server/py4web/apps/_dashboard/
+server/py4web/apps/_default/
+server/py4web/apps/_documentation/
+server/py4web/apps/_minimal/
+server/py4web/apps/_scaffold/
+server/py4web/apps/examples/
+server/py4web/apps/vidjil/databases/
+server/py4web/password.txt
+
+server/web2py/gluon/packages/dal/
+server/web2py/applications/vidjil/errors
 
 tools/align.cgi
-
 tools/similarity.cgi
+tools/*.txt
 
-germline/homo-sapiens/
+out
 
-germline/germline-59.tar.gz
-
-germline/IMGT_RELEASE
+vidjil
 
 vidjil-algo
 
-server/web2py/gluon/packages/dal/
-
+# Tests
+cypress
 cypress/
 cypress/reports
 cypress/screenshots
 cypress/videos
-
-docker/volumes/
-
-
-
 browser/test/cypress/reports
 browser/test/cypress/screenshots
 browser/test/cypress/videos
 server/web2py/applications/vidjil/tests/cypress/reports
 server/web2py/applications/vidjil/tests/cypress/screenshots
 server/web2py/applications/vidjil/tests/cypress/videos
-
 algo/tests/should-get-tests/out/*
 browser/test/*.png
 browser/test/test/TEST*
