--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -257,9 +257,13 @@ test_server_unit:
       - python3 -m pip install --no-cache -r server/unit_requirements.txt
       - mkdir -p /mnt/upload/uploads/
       - make unit_server
+    coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
     artifacts:
       reports:
         junit: server/unit_report.xml
+        coverage_report:
+          coverage_format: cobertura
+          path: server/unit_coverage.xml
     only:
       - /^feature-.*s.*\/.*$/
       - /^hotfix-.*s.*\/.*$/
