Deal with file upload in default

--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,7 @@ server/web2py/handlers
 
 
 *.vidjil
+!server/py4web/apps/vidjil/tests/unit/resources/**/*.vidjil
 *.fastq
 *.fastq.gz
 *.gz
@@ -141,3 +142,4 @@ docker/test/gosu
 server/unit_report.xml
 server/unit_coverage.xml
 server/.coverage
+server/py4web/apps/vidjil/tests/unit/resources/results/*
