API tests; exclude python path from coverage measure

--- a/docker/ci/.coveragerc
+++ b/docker/ci/.coveragerc
@@ -1,2 +1,8 @@
 [run]
-omit = *tests*
+omit = 
+	# testing script
+	*tests/*.py
+	/app/vidjil/tools/tests/*.py
+	# python lib
+	/usr/local/lib/*
+	/usr/lib/python3/*
