Makefile fix for paths

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,3 +1,5 @@
+include .env
+
 .PHONY : set_rights restart restore_data
 
 include .env-default
@@ -12,11 +14,11 @@ down:
 
 clean_deploy:
 	# Erase old container data and strat a fresh deploy; fix rights on volumes
-	sudo echo "Make a clean and fresh deploy of server (minimal profile)"
+	sudo echo "Make a clean and fresh deploy of server (minimal profile) - path : ${VOLUME_PATH}"
 	docker-compose down || true
-	sudo rm -r ./volumes/vidjil_py4web* || true
+	sudo rm -r ${VOLUME_PATH} || true
 	COMPOSE_PROFILES=minimal docker-compose up -d
-	sudo chmod 777 -R ./volumes/vidjil_py4web*
+	sudo chmod 777 -R ${VOLUME_PATH}
 	docker exec -it -w "/usr/share/vidjil/server/py4web/apps/vidjil/scripts"           docker_uwsgi_1 python3 load-sql.py -i /usr/share/vidjil/docker/ci/ci_erase.sql
 	docker exec -it -w "/usr/share/vidjil/server/py4web/apps/vidjil/tests/functional/" docker_uwsgi_1 python3 init_test_db.py
 	sleep 30
@@ -29,7 +31,7 @@ reset_database:
 	docker exec -it -w "/usr/share/vidjil/server/py4web/apps/vidjil/tests/functional/" docker_uwsgi_1 python3 init_test_db.py
 
 set_rights:
-	sudo chmod 777 -R ./volumes
+	sudo chmod 777 -R ${VOLUME_PATH}
 
 
 restart:
