--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -408,13 +408,13 @@ deploy_review_server:
     - 'ssh $REVIEW_SERVER "cd $REVIEW_SERVER_PATH_SERVER;
         ./install_certs.sh ${CI_COMMIT_REF_SLUG}; 
         cd ${CI_COMMIT_REF_SLUG}/docker_${CI_COMMIT_REF_SLUG}; 
-        echo "TIME - before pulling docker images - $(date)"
-        docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-        docker pull $CI_REGISTRY_IMAGE/$IMAGE_NAME_CLIENT
-        docker pull $CI_REGISTRY_IMAGE/$IMAGE_NAME_SERVER
-        docker tag $CI_REGISTRY_IMAGE/$IMAGE_NAME_CLIENT vidjil/client:test
-        docker tag $CI_REGISTRY_IMAGE/$IMAGE_NAME_SERVER vidjil/server:test
-        echo "TIME - after pulling docker images - $(date)"
+        echo "TIME - before pulling docker images - $(date)";
+        docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY;
+        docker pull $CI_REGISTRY_IMAGE/$IMAGE_NAME_CLIENT;
+        docker pull $CI_REGISTRY_IMAGE/$IMAGE_NAME_SERVER;
+        docker tag $CI_REGISTRY_IMAGE/$IMAGE_NAME_CLIENT vidjil/client:test;
+        docker tag $CI_REGISTRY_IMAGE/$IMAGE_NAME_SERVER vidjil/server:test;
+        echo "TIME - after pulling docker images - $(date)";
         mkdir -p postfix/ssl; 
         cat docker-compose.yml; 
         ls; 
