CI server; get vidjil volumes logs in cypress artifacts

--- a/browser/.gitlab-ci.yml
+++ b/browser/.gitlab-ci.yml
@@ -25,6 +25,7 @@
       junit: $CYPRESS_PATH/reports/test-cypress-*.xml
     paths:
       - $CYPRESS_PATH
+      - docker/volumes/vidjil/log
     expire_in: 7 day
     when: always
   tags:
