docker/Makefile; use env variables

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,5 +1,8 @@
 .PHONY : set_rights restart restore_data
 
+include .env-default
+include .env
+include .env-web2py
 	
 up:
 	COMPOSE_PROFILES=minimal docker-compose up -d
@@ -33,13 +36,27 @@ restart:
 	docker-compose restart
 
 
+###############################
+### Backup/restore MYSQL volume
 backup_mysql:
-	sudo rm -R ./volumes/vidjil_py4web_cypress/mysql_backup || true
-	sudo cp -R ./volumes/vidjil_py4web_cypress/mysql ./volumes/vidjil_py4web_cypress/mysql_backup 
+	sudo rm -R ./${VOLUME_PATH}/mysql_backup || true
+	sudo cp -R ./${VOLUME_PATH}/mysql ./${VOLUME_PATH}/mysql_backup 
 
 restore_mysql_data:
-	[ -d ./volumes/vidjil_py4web_cypress/mysql_backup  ] && sudo rm -r ./volumes/vidjil_py4web_cypress/mysql  && sudo cp -R ./volumes/vidjil_py4web_cypress/mysql_backup  ./volumes/vidjil_py4web_cypress/mysql  && echo 'Restored backup' || echo "No available backup"
+	[ -d ./${VOLUME_PATH}/mysql_backup  ] && sudo rm -r ./${VOLUME_PATH}/mysql  && sudo cp -R ./${VOLUME_PATH}/mysql_backup  ./${VOLUME_PATH}/mysql  && echo 'Restored mysql backup (${VOLUME_PATH})' || echo "No available mysql backup (${VOLUME_PATH})"
 	docker-compose restart uwsgi mysql workers
+
+
+##############################
+### Backup/restore FULL volume
+backup_volume:
+	sudo rm -R ./${VOLUME_PATH}_backup || true
+	sudo cp -R ./${VOLUME_PATH} ./${VOLUME_PATH}_backup 
+
+restore_volume:
+	[ -d ./${VOLUME_PATH}_backup  ] && sudo rm -r ./${VOLUME_PATH}  && sudo cp -R ./${VOLUME_PATH}_backup   ./${VOLUME_PATH}  && echo 'Restored volume backup (${VOLUME_PATH})' || echo "No available volume backup (${VOLUME_PATH})"
+	docker-compose restart uwsgi mysql workers fuse
+
 
 build-server:
 	docker build -t vidjil/server:py4web ./vidjil-server/
