--- a/docker/docker-compose-ci-review.yml
+++ b/docker/docker-compose-ci-review.yml
@@ -29,8 +29,8 @@ services:
         network_mode: bridge
     redis:
         network_mode: bridge
-    celery:
-        network_mode: bridge
+    # celery:
+    #     network_mode: bridge
     flower:
         network_mode: bridge
 
