--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,8 +17,9 @@ services:
             - $VOLUME_PATH/mysql:/var/lib/mysql
         healthcheck:
           test: "mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD"
-          timeout: 20s
-          retries: 10
+          timeout: 5s
+          start_period: 30s
+          retries: 40
 
     redis:
         image: redis
@@ -100,11 +101,9 @@ services:
             - ./vidjil-client/ssl:/etc/nginx/ssl
             - ./vidjil-client/conf:/etc/vidjil
             - ../germline:/usr/share/vidjil/germline
-        healthcheck:
-          test: "bash /healthchecks/healthcheck_nginx.bash"
-          timeout: 30s
-          start_period: 30s
-          retries: 2
+        depends_on:
+            uwsgi:
+                condition: service_healthy
 
     workers:
         image: vidjil/server:latest
@@ -130,28 +129,28 @@ services:
             - mysql:mysql
 
 
-    celery:
-      image: vidjil/server:latest
-      environment:
-            - SERVICE_NAME=$SERVICE_PREFIX_NAME CELERY
-      env_file:
-          - '.env-default'
-          - '.env'
-      command: bash /entrypoints/celery-entrypoint.sh
-      stdin_open: true
-      tty: true
-      volumes_from:
-          - uwsgi
-      depends_on:
-            uwsgi:
-              condition: service_healthy
-            redis:
-              condition: service_started
-            mysql:
-              condition: service_healthy
-      links:
-          - redis:redis
-          - mysql:mysql
+    # celery:
+    #   image: vidjil/server:latest
+    #   environment:
+    #         - SERVICE_NAME=$SERVICE_PREFIX_NAME CELERY
+    #   env_file:
+    #       - '.env-default'
+    #       - '.env'
+    #   command: bash /entrypoints/celery-entrypoint.sh
+    #   stdin_open: true
+    #   tty: true
+    #   volumes_from:
+    #       - uwsgi
+    #   depends_on:
+    #         uwsgi:
+    #           condition: service_healthy
+    #         redis:
+    #           condition: service_started
+    #         mysql:
+    #           condition: service_healthy
+    #   links:
+    #       - redis:redis
+    #       - mysql:mysql
 
     flower:
       image: vidjil/server:latest
