--- a/tools/.gitlab-ci.yml
+++ b/tools/.gitlab-ci.yml
@@ -6,7 +6,7 @@ test_server_api:
   script: &test_cypress_server_script
     - docker exec docker_uwsgi_1  chmod a+w /usr/share/vidjil/server/py4web/apps/vidjil/errors
     - docker exec docker_uwsgi_1  chown www-data -R /mnt/upload/uploads/ /mnt/result/results
-    - mkdir -p logs/before; for service in mysql fuse uwsgi workers celery flower nginx; do docker logs docker_${service}_1  > logs/before/${service}.log 2>&1; done
+    - mkdir -p logs/before; for service in mysql fuse uwsgi workers flower nginx; do docker logs docker_${service}_1  > logs/before/${service}.log 2>&1; done
     - docker pull "registry.gitlab.inria.fr/vidjil/vidjil/cypress_with_browsers:latest"
     - >
       docker run
