.gitlab-ci-compilers: change sources.list to a maintained Debian version
Jessie is not supported anymore since June 2020 and the deb repo have been removed. We thus switch to Bullseye that should be supported at least
until June 2026.
We also change for Buster as the end of life (which doesn't mean the deletion of the repos) should happen shortly (June 2024)

--- a/algo/.gitlab-ci-compilers.yml
+++ b/algo/.gitlab-ci-compilers.yml
@@ -1,5 +1,6 @@
 .install-algo-dependencies:
   before_script:
+    - sed -i '/security.*(jessie|buster)/d;s/(jessie|buster)/bullseye/g' /etc/apt/sources.list
     - apt-get update
     - apt-get install -y time valgrind python2.7 python3 wget tar make zlib1g-dev
     - ln -sf /usr/bin/python2.7 /usr/bin/python
