--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,5 @@ tools/tests/should-get-tests/fuse_export_airr.airr
 tools/tests/should-get-tests/vidjil-to-fasta-with-sequences.fasta
 doc/analysis-example2.analysis
 tools/flash2
+
+site/*
