algo/gitlab-ci: use Inria runners to prevent disk space issues

--- a/algo/.gitlab-ci-compilers.yml
+++ b/algo/.gitlab-ci-compilers.yml
@@ -8,7 +8,8 @@
   extends: .install-algo-dependencies
   stage: multiple_tests
   tags:
-    - cidocker
+    - ci.inria.fr
+    - medium
   script:
     - $CXX --version
     - make demo data germline
